fix(MyWorks): hide scrollbar when scroll in mobile device

--- a/src/views/Me/Works/Published/styles.module.css
+++ b/src/views/Me/Works/Published/styles.module.css
@@ -33,7 +33,6 @@
   gap: var(--spacing-base);
   padding: var(--spacing-base) var(--spacing-base) 0;
   overflow-x: auto;
-  -webkit-overflow-scrolling: touch;
 
   @media (--sm-up) {
     padding: var(--spacing-base) 0 0;
